added components css, design updates

--- a/css/style.css
+++ b/css/style.css
@@ -1,467 +1,12 @@
 @import "./font.css";
 @import "../fonts/fontawesome-web/css/all.min.css";
+@import "../css/common.css";
 @import "../css/modal.css";
 @import "../css/search-com.css";
+@import "../css/input.css";
+@import "../css/button.css";
+
 @import "../css/utils.css";
+@import "../css/auth.css";
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: none;
-}
-
-body {
-    font-family: Roboto;
-    font-weight: 400;
-    list-style: none;
-    cursor: default;
-}
-
-.--select-white-black::selection {
-    background-color: #fff;
-    color: black;
-}
-
-.--select-white-black *::selection {
-    background-color: #fff;
-    color: black;
-}
-
-.app {
-    display: flex;
-    background-color: #e2e2e2;
-}
-
-.app-side-main {
-    height: 100vh;
-    width: 22%;
-    background-color: #007aff;
-    color: #fff;
-    border-radius: 0 10px 10px 0;
-    z-index: 1;
-}
-
-.app-main-wrapper{
-    padding: 25px;
-}
-
-.app-main {
-    width: 78%;
-    padding: 9px 9px 9px 0;
-    display: flex;
-}
-
-.app-main-area-wrapper{
-    position: relative;
-    display: flex;
-    background-color: #fff;
-    border-radius: 0 10px 10px 0;
-    box-shadow: 0 0 7px #9c9c9c;
-    overflow: hidden;
-}
-
-.app-main-area {
-    height: calc(100vh - 18px);
-    width: 100%;
-    overflow: hidden;
-    background-color: #fafafa;
-    transition: width .3s ease;
-}
-
-.app-main-area-wrapper.--open-profile > .app-main-area {
-    width: 75%;
-}
-
-.app-main-area-wrapper.--open-profile > .app-main-profile {
-    right: 0;
-    box-shadow: -1px 0px 5px #0000004a;
-}
-
-.main-top {
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-actions {
-    display: flex;
-}
-
-.main-copy {
-    font-weight: 500;
-    font-size: 22px;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-}
-
-.icon-button {
-    background-color: transparent;
-    margin-left: 18px;
-    cursor: pointer;
-    outline: none;
-}
-
-.icon-button svg {
-    vertical-align: middle;
-}
-
-.icon-button--white {
-    color: #fff;
-}
-
-.icon-button-menu svg {
-    height: 20px;
-}
-
-.icon-button-menu {
-    transform: rotate(90deg);
-    margin-right: -9px;
-}
-
-.icon-button-add {
-    font-size: 22px;
-}
-
-.search-bar{
-    margin-top: 22px;
-}
-
-.main-user {
-    margin-top: 50px;
-}
-
-.main-user-wrapper {
-    display: flex;
-    flex-direction: column;
-    margin: 0 -25px;
-}
-
-.main-user-img {
-    vertical-align: middle;
-    width: 40px;
-    border-radius: 50%;
-}
-
-.main-user-item {
-    display: flex;
-    padding: 12px 25px;
-    position: relative;
-}
-
-.main-user-item:hover {
-    background-color: #ffffff30;
-    cursor: pointer;
-}
-
-.main-user-item.--active-user:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    height: 80%;
-    width: 5px;
-    background-color: #fff;
-    transform: translateY(-50%);
-    border-radius: 0px 5px 5px 0px;
-}
-
-.main-user-badge-unread {
-    position: absolute;
-    right: 25px;
-    top: 50%;
-    background-color: #fff;
-    color: #007aff;
-    font-style: normal;
-    font-size: 10px;
-    min-width: 14px;
-    height: 14px;
-    text-align: center;
-    line-height: 14px;
-    border-radius: 14px;
-    font-weight: 600;
-    transform: translateY(-50%);
-    padding: 0 3px;
-}
-
-.main-user-info {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-left: 8px;
-    justify-content: center;
-}
-
-.main-user-name {
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.main-user-copy {
-    max-width: 85%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 12px;
-    margin-top: 2px;
-}
-
-.main-user-status {
-    width: 8px;
-    height: 8px;
-    position: absolute;
-    border-radius: 50%;
-    bottom: 0;
-    right: 0;
-}
-
-.main-user-profile {
-    position: relative;
-}
-
-.main-user-status.--user-offline {
-    background-color: #cacaca;
-}
-
-.main-user-status.--user-active {
-    background-color: #00bd00;
-}
-
-.main-user-badge-unread:empty {
-    opacity: 0;
-}
-
-.app-main-top {
-    position: relative;
-    height: 80px;
-    box-shadow: 0px 2px 4px #0000004a;
-    display: flex;
-    padding: 0 30px;
-}
-
-.app-main-status {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    align-self: center;
-}
-
-.app-main-status.--user-online {
-    background-color: #00bd00;
-}
-
-.app-main-name {
-    align-self: center;
-    font-size: 24px;
-    font-weight: 600;
-    margin-left: 10px;
-    color: #404040;
-    letter-spacing: 0.5px;
-}
-
-.app-main-conv {
-    height: calc(100% - 150px);
-    padding: 15px 35px;
-    overflow: auto;
-}
-
-.user-chat-history {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    min-height: 100%;
-}
-
-.user-chat-profile{
-    position: relative;
-    align-self: flex-end;
-}
-
-.user-chat-img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    vertical-align: middle;
-}
-
-.user-chat-item {
-    display: flex;
-    margin: 0 0 25px 0;
-}
-
-.user-chat-messege {
-    max-width: 45%;
-    word-break: break-word;
-    padding: 16px;
-    background-color: #efefef;
-    margin-bottom: 16px;
-    font-size: 15px;
-    cursor: text;
-}
-
-.user-chat-item.user-chat-their {
-    flex-direction: row-reverse;
-}
-
-.user-chat-item.user-chat-my .user-chat-messege {
-    margin-left: 16px;
-    border-radius: 8px 8px 8px 0px;
-}
-
-.user-chat-item.user-chat-their .user-chat-messege {
-    margin-right: 16px;
-    border-radius: 8px 8px 0px 8px;
-    background-color: #007aff;
-    color: #fff;
-}
-
-.user-chat-time {
-    position: absolute;
-    left: 0;
-    bottom: -13px;
-    width: 100%;
-    text-align: center;
-    font-size: 10px;
-    font-weight: 600;
-    color: gray;
-}
-
-.app-input {
-    font-family: Roboto;
-    width: 100%;
-    resize: none;
-    height: 50px;
-    outline: none;
-    background-color: transparent;
-}
-
-.app-main-write {
-    box-shadow: 0px -2px 4px #0000004a;
-    position: relative;
-}
-
-.app-writer {
-    display: flex;
-    height: 100%;
-    padding: 10px 35px;
-    background-color: #efefef;
-}
-
-.icon-button-send svg {
-    width: 18px;
-}
-
-.icon-button-send {
-    height: 35px;
-    min-width: 35px;
-    background-color: #007aff;
-    color: #fff;
-    border-radius: 50%;
-    align-self: center;
-}
-
-.app-main-profile {
-    position: absolute;
-    top: 0;
-    right: -25%;
-    width: 25%;
-    box-shadow: 0px 0px 0px #0000004a;
-    height: 100%;
-    z-index: 1;
-    transition: right .3s ease;
-}
-
-.icon-button-close-profile svg {
-    width: 18px;
-    height: 18px;
-}
-
-.app-profile-block {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-top: 50px;
-    padding: 0 20px;
-}
-
-.app-profile-img {
-    vertical-align: middle;
-    width: 170px;
-    border-radius: 50%;
-}
-
-.app-profile-picture {
-    text-align: center;
-}
-
-.app-profile-wrapper {
-    padding-top: 29px;
-}
-
-.icon-button-close-profile {
-    float: right;
-    margin-right: 20px;
-}
-
-.info-icon-wraper {
-    width: 17px;
-    text-align: center;
-    margin-right: 8px;
-}
-
-.profile-info-icon {
-    color: #5a5a5a;
-    vertical-align: middle;
-}
-
-.profile-info {
-    display: flex;
-    color: #6b6b6b;
-    font-size: 14px;
-    margin-bottom: 9px;
-}
-
-.profile-phone-icon {
-    height: 17px;
-}
-
-.profile-email-icon {
-    width: 15px;
-}
-
-.profile-loc-icon {
-    width: 13px;
-}
-
-.app-profile-info {
-    margin-top: 30px;
-}
-
-.app-profile-desc {
-    text-align: center;
-    margin-top: 10px;
-}
-
-.profile-desc.app-profile-name {
-    font-weight: 600;
-    font-size: 20px;
-    color: #404040;
-}
-
-.profile-desc {
-    color: #6b6b6b;
-    font-size: 14px;
-    margin-bottom: 4px;
-}
-
-.app-profile-quote {
-    max-width: 80%;
-    margin: 0 auto;
-}
-
-.app-profile-quote:after, .app-profile-quote:before {
-    content: '"';
-    font-weight: 900;
-    font-size: 15px;
-    margin: 2px;
-}
+@import "../css/adap-resp.css";
