--- a/css/search-com.css
+++ b/css/search-com.css
@@ -1,12 +1,12 @@
 .main-search {
     border-radius: 3px;
     border: 1px solid transparent;
-    box-shadow: 0 0 0px white;
+    box-shadow: 0 0 0px #fff;
     transition: box-shadow .2s ease, border-color .2s ease;
 }
 
 .main-search:active, .main-search:focus, .main-search.main-search--focus {
-    box-shadow: 0 0 5px fff;
+    box-shadow: 0 0 5px #fff;
     border-color: #fff;
 }
 
