--- a/css/input.css
+++ b/css/input.css
@@ -1,12 +1,13 @@
 .app-form-input {
-    height: 35px;
-    border: 1px solid #c5c5c5;
-    border-radius: 3px;
-    padding: 0 10px;
-    transition: box-shadow .3s ease, border-color .3s ease;
+  height: 40px;
+  border: 1px solid #c5c5c5;
+  border-radius: 21px;
+  padding: 0 18px;
+  transition: box-shadow 0.3s ease, border-color 0.3s ease;
+  width: 100%;
 }
 
 .app-form-input:focus {
-    box-shadow: 0 0 6px #007aff;
-    border-color: #007aff;
+  box-shadow: 0 0 6px #007aff;
+  border-color: #007aff;
 }
