--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import "./font.css";
 @import "../fonts/fontawesome-web/css/all.min.css";
+@import "../css/effects.css";
 @import "../css/common.css";
 @import "../css/modal.css";
 @import "../css/search-com.css";
