--- a/css/utils.css
+++ b/css/utils.css
@@ -1,31 +1,37 @@
 .pos-abs {
-    position: absolute;
+  position: absolute;
 }
 
 .pos-rel {
-    position: relative;
+  position: relative;
 }
 
 .pos-fix {
-    position: fixed;
+  position: fixed;
 }
 
 .trans-vm {
-    top: 50%;
-    transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .trans-hc {
-    left: 50%;
-    transform: translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .trans-cm {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hide {
-    display: none;
+  display: none;
+}
+
+.link {
+  color: #0165d2;
+  font-weight: 500;
+  cursor: pointer;
 }
