--- a/css/auth.css
+++ b/css/auth.css
@@ -16,7 +16,7 @@
   margin-top: -70px;
 }
 
-.app-auth-sign-form {
+.app-profile-form {
   margin-top: 50px;
   background-color: #fff;
   padding: 25px 0;
@@ -72,10 +72,12 @@
   /* width: 300px; */
 }
 
-.form-input:focus + label {
-  top: -23px;
+.form-input:focus + label, .form-input.--filled + label {
+  top: -20px;
   left: -17px;
   color: #4d4d4d;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .app-form-controls {
@@ -87,4 +89,84 @@
   margin-top: 25px;
   font-size: 15px;
   color: #5f5f5f;
+}
+
+.main-profile-image {
+  vertical-align: middle;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50%;
+}
+
+.main-profile-wrap {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.main-profile-change {
+  position: absolute;
+  right: 8px;
+  bottom: 12px;
+  background-color: #007aff;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  box-shadow: 0 0 3px #0000004f;
+  cursor: pointer;
+}
+
+.main-profile-change svg {
+  vertical-align: middle;
+  color: #fff;
+  width: 14px;
+}
+
+.profile-image {
+  min-width: 300px;
+}
+
+.main-crop-image {
+  vertical-align: middle;
+}
+
+.main-crop-image.--landscape {
+  width: 100%;
+}
+
+.main-crop-image.--portrait {
+  max-height: 300px;
+}
+
+.profile-image-crop {
+  margin: 0 -25px;
+}
+
+.main-crop-area {
+  max-width: 400px;
+  overflow: hidden;
+  position: relative;
+}
+
+.main-crop-area:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #ffffff9e;
+}
+
+.main-crop-scope {
+  background-image: url(../images/crop.jpg);
+  position: absolute;
+  background-repeat: no-repeat;
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: 0 0 10px #0000002e inset;
+  user-select: none;
+  cursor: move;
+  transition: all .2s cubic-bezier(0.25, 0.1, 0, 0.87);
 }
